--- a/consequencia.css
+++ b/consequencia.css
@@ -2,11 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
     font-family: "Iberpangea", sans-serif;
-    background-color: #5e45008f;
+    background: rgb(247, 246, 246); 
+    background: linear-gradient(357deg, rgba(255,0,0,0.7259278711484594) 2%, rgba(255,205,0,0.865983893557423) 100%);
+    margin: 0; 
+    padding: 0; 
+    min-height: 100vh; 
 }
 
 header {
@@ -15,8 +20,7 @@ header {
     padding: 10px 0;
     text-align: center;
 }
-
-    /* barra de navegação */
+         /* barra de navegação */
 
 .navbar ul {
     list-style: none;
@@ -47,7 +51,7 @@ header {
 }
 
 .navbar ul li a:hover {
-    color: #ff6347;
+    color: #fa2a05;
 }
 
 .menu {
@@ -64,59 +68,72 @@ header {
     width: 100%;
     height: auto;
 }
-  
-        /* explicação */
+
+/* explicação */
 
 .titulo{
     padding: 20px;
     margin-left : 15% ;
     margin-top: 3%;
-    font-size: larger;
-    color: #333;
-}
+    font-size: 20px;
+    color: #000000;
+    }
 
 p{
     margin-bottom: 20px;
     font-size: 115%;
-    font-family:"Iberpangea", sans-serif ;
-
 }
-
+    
 .paragrafo{
     margin-left: 17%; 
     margin-right: auto; 
     max-width: 800px; 
     width: 90%; 
-    padding: 1em;  
-    flex: 1; 
-    margin: 1em; 
-    max-width: 800px; 
-    width: 100%; 
-}
-
-.container {  
-    display: flex; 
-    flex-wrap: wrap; 
-    align-items: center; 
-    margin: 0 auto; 
-    max-width: 1200px; 
     padding: 1em; 
 }
 
-.imagensExemplo {
-    flex: 1; 
-    margin: 1em; 
-    max-width: 400px; 
-    width: 100%; 
+        /* grafico representando o aumento de focos de queimadas\[que negocio difícil, credo] */
+
+.contGrafico { 
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.imagensExemplo img {
-    width: 100%; 
-    height: auto; 
-    border-radius: 8%;
+.barra {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
 }
 
-        /* responsividade */
+        /* Bara do rotulo */
+
+.rotBarra {   
+    width: 150px;
+    text-align: right;
+    margin-right: 10px;
+}
+
+    /* valor da barra */
+
+.valorBarra{
+    height: 30px;
+    background-color: #1f8a92;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 5px;
+}
+
+.barra-100 { width: 10%; }
+.barra-200 { width: 20%; }
+.barra-260 { width: 26%; }
+.barra-3316 { width: 80%; } 
+.barra-50 { width: 5%; }
+
+
+/* responsividade */
 
 @media (max-width: 768px) {
     .navbar ul {
@@ -141,8 +158,9 @@ p{
         display: block;
     }
 
+
     .banner img {
-        height: auto; 
+    height: auto; 
     }
     .titulo {
         margin-left: 5%; 
@@ -150,7 +168,7 @@ p{
         font-size: 120%; 
     }
 
-    .paragrafo {
+    .paragrafo{
         margin-left: 5%; 
         margin-right: 5%; 
     }
@@ -158,15 +176,23 @@ p{
     p {
         font-size: 100%; 
     }
-    .container {
-        flex-direction: column; 
+
+    .rotBarra {
+        width: 120px;
+        font-size: 14px;
     }
 
-    .imagensExemplo{
-        width: auto;
+    .barraValor {
+        font-size: 12px;
     }
 
-}
+    .barra-100 { width: 10%; }
+    .barra-200 { width: 20%; }
+    .barra-260 { width: 26%; }
+    .barra-3316 { width: 90%; }
+    .barra-50 { width: 5%; }
+    
+
 
 @media (max-width: 480px) {
     .navbar ul li a {
@@ -187,9 +213,25 @@ p{
     p {
         font-size: 95%; 
     }
-    .container {
-        flex-direction: column; 
+
+    .paragrafo{
+        margin-left: 3%; 
+        margin-right: 3%;
     }
 
-    
+    .rotBarra {
+        width: 100px;
+        font-size: 12px;
+    }
+
+    .barraValor {
+        font-size: 10px;
+    }
+
+    .barra-100 { width: 10%; }
+    .barra-200 { width: 20%; }
+    .barra-260 { width: 26%; }
+    .barra-3316 { width: 70%; }
+    .barra-50 { width: 5%; }
+}
 }
