--- a/style/galeria.css
+++ b/style/galeria.css
@@ -8,10 +8,6 @@
 body {
     font-family: "Iberpangea", sans-serif;
     background: rgb(247, 246, 246); 
-    background:linear-gradient(357deg, rgba(0,144,0,0.8155637254901961) 2%, rgba(255,205,0,0.8323704481792717) 100%);
-    margin: 0; 
-    padding: 0; 
-    min-height: 100vh;
 }
 
 header {
@@ -64,20 +60,14 @@ header {
     top: 20px;
 }
 
-.banner img {
-    width: 100%;
-    height: auto;
-}
-  
+/* texto sobre a galeria */
 
-        /* explicação das queimadas */
- 
 .titulo{
     padding: 20px;
     margin-left : 15% ;
     margin-top: 3%;
     font-size: larger;
-    color: #333;
+    color: #000000;
 }
 
 p{
@@ -95,46 +85,38 @@ p{
 }
 
 .exp li {
-    margin-left: 21%;
+    margin-left: 10%;
     font-family:"Iberpangea", sans-serif;
     margin-bottom: 22px;
+    font-size: 110%;
 }
 
-        /* mostrador das imagens das queimadas */
+        /* galeria das fotos */
 
-.container {
+.galeriaFotos {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; 
-    margin: 20px auto;
-    max-width: 1050px; 
-}
-        
-.exemplo{
-    flex: 1;
-    margin: 10px;
-    text-align: center;
-}
-        
-.exemplo h2 {
-    margin-bottom: 10px;
-    color: #333;
-}
-        
-.exemplo img {
-    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+    margin-left: 5%;
+  }
+  
+  .galeriaFotos 
+  .fotos {
+    flex: 1 1 calc(25% - 20px); 
+    box-sizing: border-box;
+  }
+  
+  .galeriaFotos 
+  .fotos img {
+    width: 80%;
     height: auto;
-    max-width: 200px;
-    border: 2px solid #b3000000;
     border-radius: 8px;
-    transition: transform 0.3s ease-in-out;
-}
-        
-.exemplo img:hover {
-    transform: scale(1.1);
-}
+    border: 2px solid #f1171700;
+  }
 
-/* responsividade */
+  /* responsividade */
 
 @media (max-width: 768px) {
     .navbar ul {
@@ -159,11 +141,6 @@ p{
         display: block;
     }
 
-
-    .banner img {
-        height: auto; 
-    }
-    
     .titulo {
         margin-left: 5%; 
         margin-right: 5%; 
@@ -180,13 +157,9 @@ p{
         font-size: 100%; 
     }
 
-    .container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .exemplo img {
-        max-width: 90%;
+    .galeriaFotos 
+    .fotos {
+        flex: 1 1 calc(50% - 20px);
     }
 }
 
@@ -217,12 +190,8 @@ p{
         margin-right: 3%;
     }
 
-    .exemplo h2 {
-        font-size: 18px;
+    .galeriaFotos 
+    .fotos {
+        flex: 1 1 calc(100% - 20px);
     }
-
-    .exemplo img {
-        max-width: 100%; 
-    }
-
 }
